ADd height main img wrapper

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 						<img src="./images/section-main/burger.png" alt="Бургер" class="main__img">
 					</div>
 					<div class="main__desc">
-						<div class="section__title section__title--color-yellow">Мы делаем</div>
+						<h1 class="section__title section__title--text-align-left section__title--color-yellow">Мы делаем</h1>
 						<div class="section__text section__text--white">натуральные бургеры</div>
 					</div>
 				</div>
@@ -61,7 +61,7 @@
 		</section>
 		<section class="section best" id="best">
 			<div class="container">
-				<div class="section__title section__title--color-dark">Мы лучшие</div>
+				<h2 class="section__title section__title--color-dark">Мы лучшие</dh2>
 				<div class="features">
 					<ul class="features__list">
 						<li class="features__item">
@@ -118,6 +118,7 @@
 		<section class="section team"></section>
 		<section class="section menu"></section>
 		<section class="section reviews" id="reviews">
+			<h3 hidden>Отзывы</h3>
 			<ul class="reviews__list">
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/1.jpg');">
 					<div class="reviews_wrapper">
