--- a/app/index.html
+++ b/app/index.html
@@ -54,14 +54,16 @@
 						<div class="section__text section__text--white">натуральные бургеры</div>
 					</div>
 				</div>
-				<a href="#" class="main__button-down">
-					<img src="./images/icons/arrow-scroll.svg" alt="вниз">
-				</a>
+				<div class="main__wrapper-down">
+					<a href="#" class="main__button-down">
+						<img src="./images/icons/arrow-scroll.svg" alt="вниз">
+					</a>
+				</div>	
 			</div>
 		</section>
 		<section class="section best" id="best">
 			<div class="container">
-				<h2 class="section__title section__title--color-dark">Мы лучшие</dh2>
+				<h2 class="section__title section__title--color-dark">Мы лучшие</h2>
 				<div class="features">
 					<ul class="features__list">
 						<li class="features__item">
