Add team section

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 								<a href="#" class="top-bar__link">Бургеры</a>
 							</li>
 							<li class="top-bar__item">
-								<a href="#" class="top-bar__link">Команда</a>
+								<a href="#team" class="top-bar__link">Команда</a>
 							</li>
 							<li class="top-bar__item">
 								<a href="#" class="top-bar__link">Меню</a>
@@ -117,8 +117,79 @@
 			</div>
 		</section>
 		<section class="section burgers"></section>
-		<section class="section team"></section>
-		<section class="section menu"></section>
+		<section class="section team" id="team">
+			<div class="team__content">
+				<h2 class="section__title section__title--color-yellow section__title--text-align-left">Команда</h2>
+				<div class="accordeon">
+					<ul class="accordeon__list">
+						<li class="accordeon__item accordeon__item--is-active">
+							<a href="#" class="accordeon__link">Дэниэл Редклифф</a>
+							<div class="accordeon-content">
+								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
+									<img src="./images/section-team/aphex.jpg" alt="aphex" class="accordeon__item-img" hidden>
+								</div>
+								<div class="accordeon-desc">
+									<div class="accordeon-desc-title">Оператор</div>
+									<div class="accordeon-desc-text">С радостью поможет подобрать идеальный бургер и формить заказ.</div>
+								</div>
+							</div>
+						</li>
+						<li class="accordeon__item">
+							<a href="#" class="accordeon__link">Ричадр Джеймс</a>
+							<div class="accordeon-content">
+								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
+									<img src="./images/section-team/aphex.jpg" alt="aphex" class="accordeon__item-img" hidden>
+								</div>
+								<div class="accordeon-desc">
+									<div class="accordeon-desc-title">Оператор</div>
+									<div class="accordeon-desc-text">С радостью поможет подобрать идеальный бургер и формить заказ.</div>
+								</div>
+							</div>
+						</li>
+						<li class="accordeon__item">
+							<a href="#" class="accordeon__link">Джейк Финн</a>
+							<div class="accordeon-content">
+								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
+									<img src="./images/section-team/aphex.jpg" alt="aphex" class="accordeon__item-img" hidden>
+								</div>
+								<div class="accordeon-desc">
+									<div class="accordeon-desc-title">Оператор</div>
+									<div class="accordeon-desc-text">С радостью поможет подобрать идеальный бургер и формить заказ.</div>
+								</div>
+							</div>
+						</li>
+						<li class="accordeon__item">
+							<a href="#" class="accordeon__link">Николай Иванов</a>
+							<div class="accordeon-content">
+								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
+									<img src="./images/section-team/aphex.jpg" alt="aphex" class="accordeon__item-img" hidden>
+								</div>
+								<div class="accordeon-desc">
+									<div class="accordeon-desc-title">Оператор</div>
+									<div class="accordeon-desc-text">С радостью поможет подобрать идеальный бургер и формить заказ.</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="section menu">
+			<h2 class="section__title section__title--color-white section__title--padding-top-left">Меню</h2>
+			<div class="accordeon-menu">
+				<ul class="accordeon-menu__list">
+					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/1.jpg');">
+						<a href="#" class="accordeon-menu__link" >Для мясоедов</a>
+					</li>
+					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/2.jpg');">
+						<a href="#" class="accordeon-menu__link" >Вегетарианское</a>
+					</li>
+					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/3.jpg');">
+						<a href="#" class="accordeon-menu__link" >Диетическое</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 		<section class="section reviews" id="reviews">
 			<h3 hidden>Отзывы</h3>
 			<ul class="reviews__list">
@@ -243,7 +314,7 @@
 				<a href="#" class="paginator__link"></a>
 			</li>
 			<li class="paginator__item">
-				<a href="#" class="paginator__link"></a>
+				<a href="#team" class="paginator__link"></a>
 			</li>
 			<li class="paginator__item">
 				<a href="#" class="paginator__link"></a>
