Add styles form

--- a/app/index.html
+++ b/app/index.html
@@ -178,14 +178,50 @@
 			<h2 class="section__title section__title--color-white section__title--padding-top-left">Меню</h2>
 			<div class="accordeon-menu">
 				<ul class="accordeon-menu__list">
-					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/1.jpg');">
+					<li class="accordeon-menu__item accordeon-menu__item--is-active" style="background-image: url('./images/section-menu/1.jpg');">
 						<a href="#" class="accordeon-menu__link" >Для мясоедов</a>
+						<div class="accordeon-menu__item-content">
+							<p class="accordeon-menu__item-text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+								Лирический субъект начинает диссонансный анжамбеман. 
+								Наш современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность высказывания, 
+								как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+							</p>
+						</div>
 					</li>
 					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/2.jpg');">
 						<a href="#" class="accordeon-menu__link" >Вегетарианское</a>
+						<div class="accordeon-menu__item-content">
+							<p class="accordeon-menu__item-text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+								Лирический субъект начинает диссонансный анжамбеман. 
+								Наш современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность высказывания, 
+								как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+							</p>
+						</div>
 					</li>
 					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/3.jpg');">
 						<a href="#" class="accordeon-menu__link" >Диетическое</a>
+						<div class="accordeon-menu__item-content">
+							<p class="accordeon-menu__item-text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+								Лирический субъект начинает диссонансный анжамбеман. 
+								Наш современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность высказывания, 
+								как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. 
+Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+							</p>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -299,7 +335,107 @@
 				</li>
 			</ul>
 		</section>
-		<section class="section form-sections"></section>
+		<section class="section how-are-work">
+
+		</section>
+		<section class="section form-section">
+			<div class="container">
+				<h2 class="section__title section__title--color-yellow">Закажите доставку</h2>
+				<div class="form">
+					<form class="form__layout">
+						<div class="form__column">
+							<div class="form__row">
+								<div class="form__field">
+									<label class="form__label" for="name">
+										Имя
+									</label>
+									<input type="text" class="form__input" id="name">
+								</div>
+								<div class="form__field">
+									<label class="form__label" for="phone">
+										Телефон
+									</label>
+									<input type="text" class="form__input" id="phone">
+								</div>
+							</div>
+							<div class="form__row">	
+								<div class="form__field">							
+									<label class="form__label" for="street">
+										Улица
+									</label>
+									<input type="text" class="form__input" id="street">
+								</div>
+							</div>
+							<div class="form__row">
+									<div class="form__field">
+										<label class="form__label" for="house">
+												Дом
+										</label>
+										<input type="text" class="form__input" id="house">
+									</div>
+									<div class="form__field">
+										<label class="form__label" for="corpus">
+												Корпус
+										</label>
+										<input type="text" class="form__input" id="corpus">
+									</div>
+									<div class="form__field">
+										<label class="form__label" for="apartment">
+												Квартира
+										</label>
+										<input type="text" class="form__input" id="apartment">
+									</div>
+									<div class="form__field">
+										<label class="form__label" for="floor">
+												Этаж
+										</label>
+										<input type="text" class="form__input" id="floor">
+									</div>
+							</div>
+						</div>
+						<div class="form__column">
+							<div class="form__row">
+									<div class="form__field">
+										<label class="form__label" for="comment">
+												Комментарий
+										</label>
+										<textarea type="text" class="form__input" id="comment" rows="3"></textarea>
+									</div>
+							</div>
+							<div class="form__row">
+								<div class="form__field">
+									<div class="form__radio">
+										<input type="radio" class="form__radio-elem" id="surrender" name="pay"  hidden>
+										<div class="form__radio-item"></div>
+										<label class="form__label form__label--radio" for="surrender">
+											Потребуется сдача
+										</label>
+										<input type="radio" class="form__radio-elem" id="card" name="pay" hidden>
+										<div class="form__radio-item"></div>
+										<label class="form__label form__label--radio" for="card">
+											Оплата по карте
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="form__row">
+									<div class="form__field form__field--checkbox">
+										<input type="checkbox" class="form__checkbox" id="checkbox" hidden>
+										<div class="form__checkbox-item"></div>
+										<label class="form__label" for="checkbox">
+												Не перезванивать
+										</label>
+									</div>
+							</div>
+							<div class="form__row">
+									<input type="submit" class="order-link order-link--submit" value="Заказать">
+									<input type="reset" class="reset" value="Очистить">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
 		<section class="section map"></section>
 	</div>
 	<div class="paginator">
