--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,10 @@
 				</div>
 				<div class="main__wrapper-down">
 					<a href="#" class="main__button-down">
-						<img src="./images/icons/arrow-scroll.svg" alt="вниз">
+						<svg class="main__button-down-icon">
+							<use xlink:href="./images/icons/sprite.svg#arrow-scroll">
+							</use>
+						</svg>
 					</a>
 				</div>	
 			</div>
@@ -436,7 +439,63 @@
 				</div>
 			</div>
 		</section>
-		<section class="section map"></section>
+		<section class="section">
+			<div class="map"></div>
+				<footer class="footer">
+						<div class="container container--footer">
+							<div class="footer__left">
+								<div class="contacts">
+									<div class="contacts__address">
+											Санкт-Петербург, ул.Бабушкина, д.12/1, 15
+									</div>
+									<div class="contacts__phone">
+										<img src="./images/icons/phone.svg" alt="phone">
+										
+										+7 (812) 377-13-77
+									
+									</div>
+								</div>
+							</div>
+							<div class="footer__right">
+								<div class="social-footer">
+									<ul class="social-footer__list">
+										<li class="social-footer__item">
+											<a href="#" class="social-footer__link">
+													<svg class="social-footer__icon social-footer__icon--vk">
+															<use xlink:href="./images/icons/sprite.svg#vk"></use>
+														</svg>
+											</a>
+										</li>
+										<li class="social-footer__item">
+												<a href="#" class="social-footer__link">
+														<svg class="social-footer__icon social-footer__icon--fb">
+																<use xlink:href="./images/icons/sprite.svg#fb">
+																</use>
+													</svg>
+												</a>
+										</li>
+										<li class="social-footer__item">
+												<a href="#" class="social-footer__link">
+													<svg class="social-footer__icon social-footer__icon--inst">
+															<use xlink:href="./images/icons/sprite.svg#inst">
+															</use>
+													</svg>
+												</a>
+										</li>
+										<li class="social-footer__item">
+												<a href="#" class="social-footer__link">
+													<svg class="social-footer__icon social-footer__icon--twitter">
+															<use xlink:href="./images/icons/sprite.svg#twitter">
+															</use>
+													</svg>
+												</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</footer>
+		</section>
 	</div>
 	<div class="paginator">
 		<ul class="paginator__list">
