Add svg features & main

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,10 @@
 					<ul class="features__list">
 						<li class="features__item">
 							<div class="features__img-wrapper">
-								<img src="./images/icons/meat.svg" alt="" class="features__img">
+									<svg class="features__img features__img--meat">
+										<use xlink:href="./images/icons/sprite.svg#meat">
+										</use>
+									</svg>
 							</div>
 							<div class="features__desc">
 								<div class="features__title">
@@ -86,7 +89,10 @@
 						</li>
 						<li class="features__item">
 								<div class="features__img-wrapper">
-									<img src="./images/icons/hand.svg" alt="" class="features__img">
+										<svg class="features__img features__img--hand">
+												<use xlink:href="./images/icons/sprite.svg#hand">
+												</use>
+										</svg>
 								</div>
 								<div class="features__desc">
 									<div class="features__title">
@@ -102,7 +108,10 @@
 							</li>
 							<li class="features__item">
 									<div class="features__img-wrapper">
-										<img src="./images/icons/natural.svg" alt="" class="features__img">
+											<svg class="features__img features__img--natural">
+													<use xlink:href="./images/icons/sprite.svg#natural">
+													</use>
+											</svg>
 									</div>
 									<div class="features__desc">
 										<div class="features__title">
