Add responsive main styles

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 							
 						</ul>
 					</nav>
-					<a href="#" class="order-link">Заказать</a>
+					<a href="#" class="order-link order-link--header">Заказать</a>
 				</header>
 				<div class="main-content">
 					<div class="main__img-wrapper">
@@ -534,6 +534,11 @@
 			</li>
 		</ul>
 	</div>
+	<a href="#" class="hamburger-bar">
+		<div class="hamburger-bar__element">
+
+		</div>
+	</a>
 </div>
 </body>
 </html>
