ADd phone and tablets

--- a/app/index.html
+++ b/app/index.html
@@ -439,7 +439,7 @@
 										</label>
 									</div>
 							</div>
-							<div class="form__row">
+							<div class="form__row form__row--submit">
 									<input type="submit" class="order-link order-link--submit" value="Заказать">
 									<input type="reset" class="reset" value="Очистить">
 							</div>
