Add mixins small-phone

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
 		</section>
 		<section class="section best" id="best">
 			<div class="container">
-				<h2 class="section__title section__title--color-dark">Мы лучшие</h2>
+				<h2 class="section__title section__title--color-dark section__title--phones-small">Мы лучшие</h2>
 				<div class="features">
 					<ul class="features__list">
 						<li class="features__item">
@@ -417,14 +417,14 @@
 							<div class="form__row">
 								<div class="form__field">
 									<div class="form__radio">
-										<input type="radio" class="form__radio-elem" id="surrender" name="pay"  hidden>
-										<div class="form__radio-item"></div>
+											<input type="radio" class="form__radio-elem" id="surrender" name="pay"  hidden>
 										<label class="form__label form__label--radio" for="surrender">
+												
 											Потребуется сдача
 										</label>
 										<input type="radio" class="form__radio-elem" id="card" name="pay" hidden>
-										<div class="form__radio-item"></div>
 										<label class="form__label form__label--radio" for="card">
+												
 											Оплата по карте
 										</label>
 									</div>
@@ -433,8 +433,7 @@
 							<div class="form__row">
 									<div class="form__field form__field--checkbox">
 										<input type="checkbox" class="form__checkbox" id="checkbox" hidden>
-										<div class="form__checkbox-item"></div>
-										<label class="form__label" for="checkbox">
+										<label class="form__label form__checkbox-item" for="checkbox">
 												Не перезванивать
 										</label>
 									</div>
