Add menu overlay styles

--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section burgers"></section>
+		<section class="section burgers" id="burgers"></section>
 		<section class="section team" id="team">
 			<div class="team__content">
 				<h2 class="section__title section__title--color-yellow section__title--text-align-left">Команда</h2>
@@ -186,7 +186,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section menu">
+		<section class="section menu" id="menu">
 			<h2 class="section__title section__title--color-white section__title--padding-top-left">Меню</h2>
 			<div class="accordeon-menu">
 				<ul class="accordeon-menu__list">
@@ -347,10 +347,10 @@
 				</li>
 			</ul>
 		</section>
-		<section class="section how-are-work">
+		<section class="section how-are-work" id="how-are-work">
 
 		</section>
-		<section class="section form-section">
+		<section class="section form-section" id="form-section">
 			<div class="container">
 				<h2 class="section__title section__title--color-yellow">Закажите доставку</h2>
 				<div class="form">
@@ -447,7 +447,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section">
+		<section class="section" id="footer">
 			<div class="map"></div>
 				<footer class="footer">
 						<div class="container container--footer">
@@ -535,9 +535,20 @@
 	</div>
 	<a href="#" class="hamburger-bar">
 		<div class="hamburger-bar__element">
-
 		</div>
 	</a>
+	<nav class="overlay-menu">
+		<ul class="overlay-menu__list">
+			<li class="overlay-menu__item"><a class="overlay-menu__link" id="link" href="#best">о нас</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#burgers">бургеры</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#team">команда</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#menu">меню</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#reviews">отзывы</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#how-are-work">как мы работаем</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#footer">контакты</a></li>
+		</ul>
+	</nav>
+
 </div>
 </body>
 </html>
