Add js overlay-menu

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 								<a href="#team" class="top-bar__link">Команда</a>
 							</li>
 							<li class="top-bar__item">
-								<a href="#" class="top-bar__link">Меню</a>
+								<a href="#menu" class="top-bar__link">Меню</a>
 							</li>
 							<li class="top-bar__item">
 								<a href="#reviews" class="top-bar__link">Отзывы</a>
@@ -38,7 +38,7 @@
 								<a href="#" class="top-bar__link">Как мы работаем</a>
 							</li>
 							<li class="top-bar__item">
-								<a href="#" class="top-bar__link">Контакты</a>
+								<a href="#footer" class="top-bar__link">Контакты</a>
 							</li>
 							
 						</ul>
@@ -533,13 +533,13 @@
 			</li>
 		</ul>
 	</div>
-	<a href="#" class="hamburger-bar">
+	<a href="#" class="hamburger-bar" id="toggle">
 		<div class="hamburger-bar__element">
 		</div>
 	</a>
-	<nav class="overlay-menu">
+	<nav class="overlay-menu" id="overlay">
 		<ul class="overlay-menu__list">
-			<li class="overlay-menu__item"><a class="overlay-menu__link" id="link" href="#best">о нас</a></li>
+			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#best">о нас</a></li>
 			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#burgers">бургеры</a></li>
 			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#team">команда</a></li>
 			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#menu">меню</a></li>
@@ -548,7 +548,7 @@
 			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#footer">контакты</a></li>
 		</ul>
 	</nav>
-
+<script src="./js/module.js"></script>
 </div>
 </body>
 </html>
