--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
 								</div>
 								<div class="burger___right-column">
 									<div class="burger__information">
-										<h2 class="section__title section__title--color-white">Dark Beef Burger</h2>
+										<h2 class="section__title section__title--color-white section__title--text-align-left">Dark Beef Burger</h2>
 										<div class="burger__description">
 											<p>
 												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, 
