--- a/app/index.html
+++ b/app/index.html
@@ -198,7 +198,7 @@
 														<svg class="dropdown__image">
 															<use xlink:href="./images/icons/sprite.svg#cucumber"></use>
 														</svg>
-														<div class="dropdown__text">Овощи/div>
+														<div class="dropdown__text">Овощи</div>
 														<div class="dropdown__weight">200г</div>
 													</li>
 													<li class="dropdown__item">
@@ -209,6 +209,11 @@
 														<div class="dropdown__weight">80г</div>
 													</li>
 												</ul>
+												<a href="" class="dropdown__close">
+													<svg class="dropdown__close-image">
+														<use xlink:href="./images/icons/sprite.svg#close"></use>
+													</svg>
+												</a>
 											</div>
 										</div>	
 									</div>
