Add js accordeon team

--- a/app/index.html
+++ b/app/index.html
@@ -243,7 +243,7 @@
 				<h2 class="section__title section__title--color-yellow section__title--text-align-left">Команда</h2>
 				<div class="accordeon">
 					<ul class="accordeon__list">
-						<li class="accordeon__item accordeon__item--is-active">
+						<li class="accordeon__item">
 							<a href="#" class="accordeon__link">Дэниэл Редклифф</a>
 							<div class="accordeon-content">
 								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
@@ -256,7 +256,7 @@
 							</div>
 						</li>
 						<li class="accordeon__item">
-							<a href="#" class="accordeon__link">Ричадр Джеймс</a>
+							<a href="#" class="accordeon__link">Ричард Джеймс</a>
 							<div class="accordeon-content">
 								<div class="accordeon__image" style="background-image: url('./images/section-team/aphex.jpg');">
 									<img src="./images/section-team/aphex.jpg" alt="aphex" class="accordeon__item-img" hidden>
