--- a/app/index.html
+++ b/app/index.html
@@ -299,7 +299,7 @@
 			<h2 class="section__title section__title--color-white section__title--padding-top-left">Меню</h2>
 			<div class="accordeon-menu">
 				<ul class="accordeon-menu__list">
-					<li class="accordeon-menu__item accordeon-menu__item--is-active" style="background-image: url('./images/section-menu/1.jpg');">
+					<li class="accordeon-menu__item" style="background-image: url('./images/section-menu/1.jpg');">
 						<a href="#" class="accordeon-menu__link" >Для мясоедов</a>
 						<div class="accordeon-menu__item-content">
 							<p class="accordeon-menu__item-text">
