--- a/app/index.html
+++ b/app/index.html
@@ -351,7 +351,7 @@
 			<h3 hidden>Отзывы</h3>
 			<ul class="reviews__list">
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/1.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -364,7 +364,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/2.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -377,7 +377,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/3.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -390,7 +390,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/4.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -403,7 +403,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/5.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -416,7 +416,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/6.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -429,7 +429,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/7.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
@@ -442,7 +442,7 @@
 					</div>
 				</li>
 				<li class="reviews__item" style="background-image: url('./images/section-reviews/8.jpg');">
-					<div class="reviews_wrapper">
+					<div class="reviews__wrapper">
 						<div class="reviews__title">
 							Константин Спилберг
 						</div>
