--- a/app/index.html
+++ b/app/index.html
@@ -219,6 +219,178 @@
 									</div>
 								</div>
 							</li>
+							<li class="burger__item">
+								<div class="burger___left-column">
+									<div class="burger__image-wrapper">
+										<img src="./images/section-burger/burger.png" alt="burger" class="burger__image">
+									</div>
+								</div>
+								<div class="burger___right-column">
+									<div class="burger__information">
+										<h2 class="section__title section__title--color-white section__title--text-align-left">Dark Beef Burger</h2>
+										<div class="burger__description">
+											<p>
+												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, 
+												двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+											</p>
+										</div>
+										<div class="burger__order">
+											<div class="burger__price">
+												<div class="burger__price-nubmber">500</div>
+												<div class="burger__price-text">рублей</div>
+											</div>
+											<a href="#" class="order-link">Заказать</a>
+										</div>
+										<div class="burger__caloricity">
+											<div class="burger__caloricity-number">1200</div>
+											<div class="burger__caloricity-unit">ккал</div>
+										</div>
+										<div class="burger__composition">
+											<svg class="burger__composition-image">
+													<use xlink:href="./images/icons/sprite.svg#burger"></use>
+											</svg>
+											<div class="burger__composition-title">Состав</div>
+											<div class="burger__composition-menu dropdown">
+												<ul class="dropdown__list">
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#beef"></use>
+														</svg>
+														<div class="dropdown__text">Говядина</div>
+														<div class="dropdown__weight">300г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#buns"></use>
+														</svg>
+														<div class="dropdown__text">Булочки</div>
+														<div class="dropdown__weight">100г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#salad"></use>
+														</svg>
+														<div class="dropdown__text">Зелень</div>
+														<div class="dropdown__weight">70г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#sauce"></use>
+														</svg>
+														<div class="dropdown__text">Соус</div>
+														<div class="dropdown__weight">150г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#cucumber"></use>
+														</svg>
+														<div class="dropdown__text">Овощи</div>
+														<div class="dropdown__weight">200г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#cheese"></use>
+														</svg>
+														<div class="dropdown__text">Сыр</div>
+														<div class="dropdown__weight">80г</div>
+													</li>
+												</ul>
+												<a href="" class="dropdown__close">
+													<svg class="dropdown__close-image">
+														<use xlink:href="./images/icons/sprite.svg#close"></use>
+													</svg>
+												</a>
+											</div>
+										</div>	
+									</div>
+								</div>
+							</li>
+							<li class="burger__item">
+								<div class="burger___left-column">
+									<div class="burger__image-wrapper">
+										<img src="./images/section-burger/burger.png" alt="burger" class="burger__image">
+									</div>
+								</div>
+								<div class="burger___right-column">
+									<div class="burger__information">
+										<h2 class="section__title section__title--color-white section__title--text-align-left">Dark Beef Burger</h2>
+										<div class="burger__description">
+											<p>
+												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, 
+												двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+											</p>
+										</div>
+										<div class="burger__order">
+											<div class="burger__price">
+												<div class="burger__price-nubmber">500</div>
+												<div class="burger__price-text">рублей</div>
+											</div>
+											<a href="#" class="order-link">Заказать</a>
+										</div>
+										<div class="burger__caloricity">
+											<div class="burger__caloricity-number">1200</div>
+											<div class="burger__caloricity-unit">ккал</div>
+										</div>
+										<div class="burger__composition">
+											<svg class="burger__composition-image">
+													<use xlink:href="./images/icons/sprite.svg#burger"></use>
+											</svg>
+											<div class="burger__composition-title">Состав</div>
+											<div class="burger__composition-menu dropdown">
+												<ul class="dropdown__list">
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#beef"></use>
+														</svg>
+														<div class="dropdown__text">Говядина</div>
+														<div class="dropdown__weight">300г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#buns"></use>
+														</svg>
+														<div class="dropdown__text">Булочки</div>
+														<div class="dropdown__weight">100г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#salad"></use>
+														</svg>
+														<div class="dropdown__text">Зелень</div>
+														<div class="dropdown__weight">70г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#sauce"></use>
+														</svg>
+														<div class="dropdown__text">Соус</div>
+														<div class="dropdown__weight">150г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#cucumber"></use>
+														</svg>
+														<div class="dropdown__text">Овощи</div>
+														<div class="dropdown__weight">200г</div>
+													</li>
+													<li class="dropdown__item">
+														<svg class="dropdown__image">
+															<use xlink:href="./images/icons/sprite.svg#cheese"></use>
+														</svg>
+														<div class="dropdown__text">Сыр</div>
+														<div class="dropdown__weight">80г</div>
+													</li>
+												</ul>
+												<a href="" class="dropdown__close">
+													<svg class="dropdown__close-image">
+														<use xlink:href="./images/icons/sprite.svg#close"></use>
+													</svg>
+												</a>
+											</div>
+										</div>	
+									</div>
+								</div>
+							</li>
 						</ul>
 					</div>
 					<div class="burger__arrows">
