Fix bugs accordeon

--- a/app/index.html
+++ b/app/index.html
@@ -642,13 +642,13 @@
 									<label class="form__label" for="name">
 										Имя
 									</label>
-									<input type="text" class="form__input" id="name" name="name">
+									<input type="text" class="form__input" id="name" name="name" required>
 								</div>
 								<div class="form__field">
 									<label class="form__label" for="phone">
 										Телефон
 									</label>
-									<input type="text" class="form__input" id="phone" name="phone">
+									<input type="text" class="form__input" id="phone" name="phone" required>
 								</div>
 							</div>
 							<div class="form__row">	
@@ -656,7 +656,7 @@
 									<label class="form__label" for="street">
 										Улица
 									</label>
-									<input type="text" class="form__input" id="street" name="street">
+									<input type="text" class="form__input" id="street" name="street" required>
 								</div>
 							</div>
 							<div class="form__row">
@@ -664,25 +664,25 @@
 										<label class="form__label" for="house">
 												Дом
 										</label>
-										<input type="text" class="form__input" id="house" name="house">
+										<input type="text" class="form__input" id="house" name="house" required>
 									</div>
 									<div class="form__field">
 										<label class="form__label" for="corpus">
 												Корпус
 										</label>
-										<input type="text" class="form__input" id="corpus"name="corpus">
+										<input type="text" class="form__input" id="corpus"name="corpus" required>
 									</div>
 									<div class="form__field">
 										<label class="form__label" for="apartment">
 												Квартира
 										</label>
-										<input type="text" class="form__input" id="apartment" name="apartment">
+										<input type="text" class="form__input" id="apartment" name="apartment" required>
 									</div>
 									<div class="form__field">
 										<label class="form__label" for="floor">
 												Этаж
 										</label>
-										<input type="text" class="form__input" id="floor" name="floor">
+										<input type="text" class="form__input" id="floor" name="floor" required>
 									</div>
 							</div>
 						</div>
@@ -692,7 +692,7 @@
 										<label class="form__label" for="comment">
 												Комментарий
 										</label>
-										<textarea type="text" class="form__input" id="comment" rows="3" name="comment"></textarea>
+										<textarea type="text" class="form__input" id="comment" rows="3" name="comment" required></textarea>
 									</div>
 							</div>
 							<div class="form__row">
@@ -713,7 +713,7 @@
 							</div>
 							<div class="form__row">
 									<div class="form__field form__field--checkbox">
-										<input type="checkbox" class="form__checkbox" id="checkbox" hidden name="callback">
+										<input type="checkbox" class="form__checkbox" id="checkbox" hidden name="callback" >
 										<label class="form__label form__checkbox-item" for="checkbox">
 												Не перезванивать
 										</label>
