--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
 	<title>Проект BURGER Лактионовой Дарьи</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+    </script>
 </head>
 <body>
 <div class="wrapper">
@@ -729,7 +731,7 @@
 			</div>
 		</section>
 		<section class="section" id="footer">
-			<div class="map"></div>
+			<div class="map" id="map"></div>
 				<footer class="footer">
 						<div class="container container--footer">
 							<div class="footer__left">
