--- a/app/index.html
+++ b/app/index.html
@@ -831,6 +831,10 @@
 			<li class="overlay-menu__item"><a class="overlay-menu__link" href="#footer">контакты</a></li>
 		</ul>
 	</nav>
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script src="./js/module.js"></script>
 </div>
 </body>
