--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="wrapper">
 	<div class="content">
-		<section class="section main" id="main">
+		<section class="section main active" id="main">
 			<div class="container">
 				<header class="header">
 					<a href="#" class="logo">
