ADD style how at work

--- a/app/index.html
+++ b/app/index.html
@@ -631,7 +631,9 @@
 			</ul>
 		</section>
 		<section class="section how-are-work" id="how-are-work">
-
+			<div class="container">
+				<h2 class="section__title">Как мы работаем</h2>
+			</div>
 		</section>
 		<section class="section form-section" id="form-section">
 			<div class="container">
